wrapped foreign object in div to set position to fixed

--- a/client/src/components/MyMap.css
+++ b/client/src/components/MyMap.css
@@ -3,3 +3,7 @@
 	top: 0;
 	left: 0;
 }
+
+.foreign-object-container {
+	position: fixed;
+}
